--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: '3'
 services:
-  web:
-    build: .
-    ports:
-     - "8777:8777"
+    web:
+        build: .
+        ports:
+            - "8777:8777"
+#         volumes:
+#             - .:/code
