--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-    web:
+    scores_server:
         build: .
         ports:
-            - "8777:8777"
+            - 8777:8777
